mined fixed :)