@@ -3,12 +3,21 @@ import com.google.gson.GsonBuilder;
 
 public class miniBlockchain{
 
-    public static ArrayList<block> blockchain = new ArrayList<block>();
+    public static ArrayList<block> blockchain = new ArrayList<>();
+
+    public static int difficulty = 1  ;
+
     public static void main(String[] args) {
-        blockchain.add(new block("Hi im the first block", "0"));
-        blockchain.add(new block("Hi im the second block", blockchain.get(blockchain.size()-1).hash));
-        blockchain.add(new block("Hi im the third block", blockchain.get(blockchain.size()-1).hash));
-        blockchain.add(new block("Hi im the fourth block", blockchain.get(blockchain.size()-1).hash));
+        System.out.println("Trying to Mine block 1... ");
+        addBlock(new block("Hi im the first block", "0"));
+        System.out.println("Trying to Mine block 2... ");
+        addBlock(new block("Hi im the second block", blockchain.getLast().hash));
+        System.out.println("Trying to Mine block 3... ");
+        addBlock(new block("Hi im the third block", blockchain.getLast().hash));
+        System.out.println("Trying to Mine block 4... ");
+        addBlock(new block("Hi im the fourth block", blockchain.getLast().hash));
+
+
 
         String blockchainJson = new GsonBuilder().setPrettyPrinting().create().toJson(blockchain);
         System.out.println(blockchainJson);
@@ -17,10 +26,12 @@ public class miniBlockchain{
     public static boolean ChainValid(){
         block currentBlock;
         block previousBlock;
+        String hashTarget = new String(new char[difficulty]).replace('\0', '0');
 
         for (int i=1; i<blockchain.size(); i++){
             currentBlock = blockchain.get(i);
             previousBlock = blockchain.get(i-1);
+
             if (!currentBlock.hash.equals(currentBlock.calculateHash())){ //actual con su hash calculado
                 System.out.println("Hashes are not equal");
                 return false;
@@ -29,7 +40,18 @@ public class miniBlockchain{
                 System.out.println("Previous Hashes are not equal");
                 return false;
             }
-        } return true;
+
+            if (!currentBlock.hash.substring(0, difficulty).equals(hashTarget)){
+                System.out.println("Block wasn't mined");
+                return false;
+            }
+        }
+        return true;
     }
+    public static void addBlock(block newBlock) {
+        newBlock.mineBlock(difficulty);
+        blockchain.add(newBlock);
+
+}
 }
 
